# ComfyUI-BiRefNet

./: .gitignore  BiRefNet_node.py  README.md  __init__.py  dataset.py  debug.ipynb  downloader.py  install.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
models/backbones/: build_backbone.py
workflow/: example_workflow.json
